@@ -16,4 +16,4 @@
 BASEDIR=../..
 include $(BASEDIR)/makefiles/Makefile.toplevel
 include $(BASEDIR)/makefiles/Makefile.common
-TOPFLAGS = -w A
+TOPFLAGS = -w A -strict-sequence
